--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@Mr-ZeMoreno/latex-parser",
   "version": "1.0.0",
-  "description": "Template project for writing node package with napi-rs",
+  "description": "Rust based parser for latex equations",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -73,6 +73,14 @@
     "prettier": "3.6.2",
     "tinybench": "6.0.0",
     "typescript": "5.9.2"
+  },
+  "optionalDependencies": {
+    "latex-parser-darwin-x64": "1.0.0",
+    "latex-parser-darwin-arm64": "1.0.0",
+    "latex-parser-linux-x64-gnu": "1.0.0",
+    "latex-parser-linux-x64-musl": "1.0.0",
+    "latex-parser-linux-arm64-gnu": "1.0.0",
+    "latex-parser-linux-arm64-musl": "1.0.0"
   },
   "lint-staged": {
     "*.@(js|ts|tsx)": [
