--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@Mr-ZeMoreno/latex-parser",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Rust based parser for latex equations",
   "main": "index.js",
   "repository": {
@@ -19,8 +19,7 @@
   ],
   "files": [
     "index.d.ts",
-    "index.js",
-    "browser.js"
+    "index.js"
   ],
   "napi": {
     "binaryName": "latex-parser",
